--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
         <div class="scoreboard">
-            <h2 class="bankroll">Bankroll</h2>
-            <h2 class="point">Current Point</h2>
+            <h2 class="bankroll">Bankroll: $100</h2>
+            <h2 class="point">Current Point: Roll Dice to set point</h2>
+            <h2 class="wager-amount">Wager Amount: Select Chips to Increase Wager</h2>
+            <div class="messages"></div>
         </div>
         <div class="gameboard">
             <div class="dice1"></div>
