added  side bet menu and field

--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
             <img class="c100" src="img/100 chip.png" alt="$100 Chip">
             <button class="roll-dice">Roll Dice</button>
         </div>
+        <div class="sidebet-menu">
+            <h2>Side Bet Menu</h2>
+            <h3>Total Side Bets:</h3>
+            <img class="field"  src="img/field.png" alt="field image">
+            <h4 class="field-amount">Field Bet Amount: No current wager</h4>
+            <div class="sidebet-chips">
+                <img class="fieldc1" src="img/1 chip.png" alt="$1 Chip">
+                <img class="fieldc5" src="img/5 chip.png" alt="$5 Chip">
+                <img class="fieldc10" src="img/10 chip.png" alt="$10 Chip">
+                <img class="fieldc25" src="img/25 chip.png" alt="$25 Chip">
+                <img class="fieldc50" src="img/50 chip.png" alt="$50 Chip">
+                <img class="fieldc100" src="img/100 chip.png" alt="$100 Chip">
+            </div>
+            <div  class="blank-div"></div>
+            
+
+        </div>
         <script src="script.js"></script> 
 </body>
 </html>
