added more side bets

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h2 class="point">Current Point: Roll Dice to set point</h2>
             <h2 class="wager-amount">Wager Amount: Select Chips to Increase Wager</h2>
             <div class="messages"></div>
+            <div class="placebets"></div>
         </div>
         <div class="gameboard">
             <div class="dice1"></div>
@@ -29,6 +30,7 @@
         <div class="sidebet-menu">
             <h2>Side Bet Menu</h2>
             <h3>Total Side Bets:</h3>
+            <hr>
             <img class="field"  src="img/field.png" alt="field image">
             <h4 class="field-amount">Field Bet Amount: No current wager</h4>
             <div class="sidebet-chips">
@@ -40,6 +42,46 @@
                 <img class="fieldc100" src="img/100 chip.png" alt="$100 Chip">
             </div>
             <div  class="blank-div"></div>
+            <hr>
+            <img class="any7" src="img/any7.png" alt="any 7 image">
+            <h4 class="any7-amount">Any 7 Bet Amount: No current wager</h4>
+            <div class="sidebet-chips">
+                <img class="fieldc1" src="img/1 chip.png" alt="$1 Chip">
+                <img class="fieldc5" src="img/5 chip.png" alt="$5 Chip">
+                <img class="fieldc10" src="img/10 chip.png" alt="$10 Chip">
+                <img class="fieldc25" src="img/25 chip.png" alt="$25 Chip">
+                <img class="fieldc50" src="img/50 chip.png" alt="$50 Chip">
+                <img class="fieldc100" src="img/100 chip.png" alt="$100 Chip">
+            </div>
+            <div  class="blank-div2"></div>
+            <hr>
+            <img class="anyCraps" src="img/anycraps.png" alt="any Craps image">
+            <h4 class="any7-amount">Any Craps Bet Amount: No current wager</h4>
+            <div class="sidebet-chips">
+                <img class="fieldc1" src="img/1 chip.png" alt="$1 Chip">
+                <img class="fieldc5" src="img/5 chip.png" alt="$5 Chip">
+                <img class="fieldc10" src="img/10 chip.png" alt="$10 Chip">
+                <img class="fieldc25" src="img/25 chip.png" alt="$25 Chip">
+                <img class="fieldc50" src="img/50 chip.png" alt="$50 Chip">
+                <img class="fieldc100" src="img/100 chip.png" alt="$100 Chip">
+            </div>
+            <div  class="blank-div3"></div>
+            <hr>
+            <img class="hardway" src="img/hardway.png" alt="Hardway Bets image">
+            <h4 class="hardway-amount">Hardway Bet Amount: No current wager</h4>
+            <div class = "hard-option"></div>
+            <div class="sidebet-chips">
+                <img class="fieldc1" src="img/1 chip.png" alt="$1 Chip">
+                <img class="fieldc5" src="img/5 chip.png" alt="$5 Chip">
+                <img class="fieldc10" src="img/10 chip.png" alt="$10 Chip">
+                <img class="fieldc25" src="img/25 chip.png" alt="$25 Chip">
+                <img class="fieldc50" src="img/50 chip.png" alt="$50 Chip">
+                <img class="fieldc100" src="img/100 chip.png" alt="$100 Chip">
+                
+            </div>
+            <div  class="blank-div3"></div>
+
+
             
 
         </div>
