addeed all placee bets

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h2 class="wager-amount">Wager Amount: Select Chips to Increase Wager</h2>
             <div class="messages"></div>
             <div class="placebets"></div>
+            <div class="blank-place"></div>
         </div>
         <div class="gameboard">
             <div class="dice1"></div>
