--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <h2 class="point">Current Point: Roll Dice to set point</h2>
             <h2 class="wager-amount">Wager Amount: Select Chips to Increase Wager</h2>
             <div class="messages"></div>
-            <div class="placebets"></div>
+            <div class="placebets">
+                <h2 class="placebetsnotes">kjaljkjaj</h2>
+            </div>
             <div class="blank-place"></div>
         </div>
         <div class="gameboard">
