coommented out plaacce bets

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2 class="wager-amount">Wager Amount: Select Chips to Increase Wager</h2>
             <div class="messages"></div>
             <div class="placebets">
-                <h2 class="placebetsnotes">kjaljkjaj</h2>
+                <div class="placebetsnotes"></div>
             </div>
             <div class="blank-place"></div>
         </div>
