--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
             <h2 class="bankroll">Bankroll: $250</h2>
             <h2 class="point">Current Point: Roll Dice to set point</h2>
             <h2 class="wager-amount">Wager Amount: Select Chips to Increase Wager</h2>
-            <div class="messages"></div>
+            <h2 class="messages">Action Messages will display here!</h2>
             <div class="placebets">
                 <div class="placebetsnotes"></div>
             </div>
             <div class="blank-place"></div>
         </div>
         <div class="gameboard">
+            <img class = "starting" src = "img/craps table image.png" alt="craps table">
             <div class="dice1"></div>
             <div class="dice2"></div>
         </div>
