--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <img class="c25" src="img/25 chip.png" alt="$25 Chip">
             <img class="c50" src="img/50 chip.png" alt="$50 Chip">
             <img class="c100" src="img/100 chip.png" alt="$100 Chip">
-            <button class="roll-dice">Roll Dice</button>
+            <img class="roll-dice" src="img/rolling dice.png" alt="rolling dice button">
+            <!-- <button class="roll-dice">Roll Dice</button> -->
         </div>
         <div class="sidebet-menu">
             <h2>Side Bet Menu</h2>
